--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="add_a_child_to_the_current_node">Add a child to the current node</string>
     <string name="child_name">child name</string>
     <string name="node_name">Node name</string>
+    <string name="delete_child_node">Delete child node</string>
 </resources>
